<resources>
    <string name="app_name" translatable="false">e-Step</string>
    <string name="_0" translatable="false">0</string>
    <string name="action_settings">Settings</string>
    <string name="person">Person</string>
    <string name="settings">Settings</string>
    <string name="_7500" translatable="false">/7500</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="km">KM</string>
    <string name="bar" translatable="false">|</string>
    <string name="share_subject" translatable="false" />
    <string name="share_using" translatable="false" />
    <string name="share">Share</string>
    <string name="reset_data">Reset Data</string>
    <string name="share_string">\ Check out my progress at e-Step app! \</string>
    <string name="steps_string">\ steps. \"</string>
    <string name="goal_done_string">I have also achieved my daily goal of 7500 steps!</string>
    <string name="done_string">\ I have done \</string>
    <string name="steps_today">\ steps today!\</string>
    <string name="total_steps">\ Total steps done: </string>
    <string name="your_weight">Your weight:</string>
    <string name="weight">Weight</string>
    <string name="your_height">Your height:</string>
    <string name="height">Height</string>
    <string name="km_done">Total KM done:</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="change_language">Change language</string>
    <string name="gr" translatable="false">Ελληνικά</string>
    <string name="english" translatable="false">English</string>
</resources>