<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@mipmap/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/custom"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/settings_id"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ImageView
        android:id="@+id/person_id"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_person_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_id"/>


    <TextView
        android:id="@+id/total_steps_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/total_steps"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_id"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/total_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:text="@string/km_done"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_steps_id"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/you_weight_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:text="@string/your_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_km"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/set_weight_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/weight"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/you_weight_view_id"
        app:layout_constraintBottom_toBottomOf="@id/you_weight_view_id"
        app:layout_constraintLeft_toRightOf="@id/you_weight_view_id"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/you_height_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:text="@string/your_height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/you_weight_view_id"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/set_height_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/you_height_view_id"
        app:layout_constraintBottom_toBottomOf="@id/you_height_view_id"
        app:layout_constraintLeft_toRightOf="@id/you_height_view_id"
        android:importantForAutofill="no" />



</androidx.constraintlayout.widget.ConstraintLayout>