<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/custom"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/settings_id"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--progress bar implementation-->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circular_shape"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:textAlignment="center" />
        <!--Text implementation in center of the progress bar-->
        <TextView
            android:id="@+id/step_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:hint="@string/_0"
            android:textColor="@color/black"
            android:textColorHint="#78909C"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="@id/progress_layout"
            app:layout_constraintRight_toRightOf="@id/progress_layout"
            app:layout_constraintTop_toTopOf="@id/progress_layout" />

        <TextView
            android:id="@+id/goal_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7500"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/step_counter"
            app:layout_constraintRight_toRightOf="@id/step_counter"
            app:layout_constraintTop_toBottomOf="@id/step_counter" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/km_textview_id"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/progress_layout"
        app:layout_constraintRight_toRightOf="@id/progress_layout"
        app:layout_constraintTop_toBottomOf="@+id/progress_layout"/>

    <TextView
        android:id="@+id/km_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/_0"
        android:textColorHint="#546E7A"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/km_textview_id"
        app:layout_constraintRight_toRightOf="@id/km_textview_id"
        app:layout_constraintTop_toBottomOf="@+id/km_textview_id" />


    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/rounded_rectangle"
        android:padding="12dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:id="@+id/reset_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_data"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/share_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginBottom="10dp"
        android:text="@string/share"
        app:layout_constraintLeft_toLeftOf="@id/progress_layout"
        app:layout_constraintRight_toRightOf="@id/progress_layout"
        app:layout_constraintBottom_toTopOf="@id/progress_layout"/>






</androidx.constraintlayout.widget.ConstraintLayout>
